# jf1uids

./: .firebaserc  .gitignore  LICENSE  README.md  TODO.md  cartesian_shock.py  environment.yml  l2_errors.pkl  lossesX.npz  package-lock.json  package.json  paper_gradients.ipynb  paper_numerics.ipynb  paper_optim2.ipynb  pyproject.toml  setup_mamba.bash  setup_mamba.sh  simple_example.ipynb  sod_errors.npy  spherical_shock.py  stellar_wind.py  trained_paramsX.pkl  weaver.py  wind_parameter_optimization.ipynb
.firebase/: hosting.ZG9jcy9idWlsZC9odG1s.cache
.hydra/: config.yaml  hydra.yaml
arena/: README.md  fd_mhd.py  fv_mhd.py  fv_mhd_hll_eul.py  fv_mhd_hll_mid.py  fv_mhd_lax_mid.py  fv_oscillations.py  how_mhd.py  results  scaling_comparison.py
configs/: .config.yaml.swp  config.yaml
corrector_src/: config.yaml  hydra_test.py  time_integration_og.py  time_integration_train.py  training.py
data_backup/: loss_list2.npy  loss_map.npy
jaxfluids_comparison/: numerical_setup.json  run_sod.py  shock_tube.py  sod.json
jf1uids/: CFL.py  __init__.py  boundaries.py  euler.py  fluid.py  geometry.py  limiters.py  muscl_scheme.py  postprocessing.py  riemann.py  simulation_checkpoint_data.py  simulation_config.py  simulation_helper_data.py  simulation_params.py  time_integration.py
legacy/: helpers.py  jf1uids.py  jf1uidsR.py  jf1uidsRC.py  jf1uidsWENO.py  paper_optim.ipynb  paper_optim3.ipynb  test.py  unit_helpers.py
notebooks/: conservational_properties.ipynb  gradients_through_stellar_wind.ipynb  gravity_tests.ipynb  kelvin_helmholtz.ipynb  limiter_test.ipynb  (+9 more)
(+1014 files in other folders)
